@@ -58,10 +58,17 @@ amlibexec_SCRIPTS_PERL += \
 sbin_SCRIPTS_PERL += \
 	    amfetchdump \
 	    amrestore
+else
+EXTRA_DIST += amidxtaped.pl \
+	      amfetchdump.pl \
+	      amrestore.pl
 endif
+
 if WANT_REST_SERVER
 sbin_SCRIPTS_PERL += \
 	    amanda-rest-server
+else
+EXTRA_DIST += amanda-rest-server.pl
 endif
 sbin_SCRIPTS_SHELL = \
 	    amcheckdb
