@@ -1,4 +1,9 @@
 2017-03-07  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* perl/Makefile.am, rest-server/Makefile.am, server-src/Makefile.am:
+	  fix 'make dist' when compiled with --wothout-server or
+	  --without-client
+
+2017-03-07  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* installcheck/amstar.pl: Check first line of errors
 
 2017-03-07  Jean-Louis Martineau <JMartineau@carbonite.com>
